# clinical-semantic-search

./: .gitignore  LICENSE  PORTING_GUIDE.md  README.md  pyproject.toml
benchmarks/: index_recall.py  latency_decomposition.py  mcqa_evaluation.py
docs/: architecture.md  deployment-gcp.md  metadata-store-schema.md  security-model.md  vector-index-setup.md
examples/: example.env  example_search.py
src/clinical_semantic_search/: config.py
src/clinical_semantic_search/core/: chunking.py  embedding.py  formatting.py  pooling.py
src/clinical_semantic_search/etl/: ehr_preprocessing.py  parallel_embedding.py  vector_export.py
src/clinical_semantic_search/services/: access_control.py  audit_logging.py  metadata_store.py  vector_search.py
tests/: test_chunking.py  test_embedding.py  test_formatting.py  test_pooling.py
webapp/: app.py
webapp/filter_data/: README.md
webapp/static/: script.js  style.css
webapp/templates/: index.html
